--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,26 +1,18 @@
 <nz-header class="default-header">
-  <nz-sider class="default-header__logo" [(nzCollapsed)]="isCollapsed" nzCollapsedWidth="64" nzWidth="200px"
+  <nz-sider class="default-header__logo" nzTheme="light" [(nzCollapsed)]="isCollapsed" nzCollapsedWidth="64" nzWidth="184px"
     nzCollapsible [nzTrigger]="null">
     <img class="default-header__img" src="./assets/logo-full.svg" alt="">
   </nz-sider>
-  <ul class="default-nav" nz-menu nzTheme="light" nzMode="horizontal">
-    <li class="default-nav__item" nz-menu-item (click)="collapsing()">
-      <i nz-icon [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold' "></i>
-    </li>
-    <li class="default-nav__item" nz-menu-item>
-      <a routerLink="/projects" class="default-nav__text" rel="noopener noreferrer">
-        <i nz-icon nzType="folder-open" nzTheme="outline"></i>
-        Proyectos
-      </a>
-    </li>
-    <li class="default-nav__item" nz-menu-item>
-      <a routerLink="/issues" class="default-nav__text" rel="noopener noreferrer">
-        <i nz-icon nzType="exclamation-circle" nzTheme="outline"></i>
-        Issues
-      </a>
-    </li>
-    <!-- <li nz-menu-item>
-      <a class="default-nav__text" href="https://ng.ant.design" target="_blank" rel="noopener noreferrer">Navigation Four - Link</a>
-    </li> -->
-  </ul>
+  <div class="default-nav-wrap">
+    <ul class="default-nav" nz-menu nzTheme="light" nzMode="horizontal">
+      <li class="default-nav__item" nz-menu-item (click)="collapsing($event)">
+        <i nz-icon [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold' "></i>
+      </li>
+    </ul>
+    <ul class="default-nav" nz-menu nzTheme="light" nzMode="horizontal">
+      <li class="default-nav__item" nz-menu-item (click)="collapsing($event)">
+        <i nz-icon [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold' "></i>
+      </li>
+    </ul>
+  </div>
 </nz-header>
