--- a/src/app/admin/dashboard/dashboard.component.scss
+++ b/src/app/admin/dashboard/dashboard.component.scss
@@ -1,3 +1,9 @@
+$dodger-blue: #1890ff;
+$white: #fff;
+$soft-peach: #efe3e5;
+$athens-grey: #fafbfc;
+$gray: #929292;
+
 .default {
   &-layout {
     display: flex;
@@ -15,15 +21,15 @@
     height: 64px;
     padding: 0 16px;
 
-    background: #1890ff;
-    color: #fff;
+    background: $dodger-blue;
+    color: $white;
 
     align-items: center;
     &-logo {
       max-height: 40px;
       overflow: hidden;
 
-      background: #1890ff;
+      background: $dodger-blue;
 
       vertical-align: top;
     }
@@ -40,7 +46,7 @@
     margin-left: 0;
 
     background: transparent;
-    color: #fff;
+    color: $white;
 
     line-height: 40px;
     & .ant-menu-item {
@@ -48,15 +54,15 @@
       border-radius: 4px;
       &:hover {
         background: rgba(255,255,255,.5);
-        color: #fff;
+        color: $white;
       }
       &:active {
         background: transparent;
-        color: #fff;
+        color: $white;
       }
       &:focus {
         background: transparent;
-        color: #fff;
+        color: $white;
       }
       i {
         margin: 0;
@@ -64,7 +70,7 @@
     }
     & .ant-menu-item-selected {
       background: transparent;
-      color: #fff;
+      color: $white;
     }
   }
 
@@ -84,10 +90,10 @@
     &__header {
       display: flex;
       padding: 12px 24px;
-      border-bottom: 1px solid #efe3e5;
+      border-bottom: 1px solid $soft-peach;
 
-      background-color: #fafbfc;
-      color: #929292;
+      background-color: $athens-grey;
+      color: $gray;
 
       flex-direction: column;
       justify-content: space-between;
@@ -104,7 +110,7 @@
     height: 100%;
     margin-top: 64px;
 
-    background: #fff;
+    background: $white;
   }
 }
 
