--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,16 +13,17 @@
   margin: 0;
 }
 
-body {
-  text-rendering: optimizeLegibility;
-
-  -webkit-font-smoothing: antialiased;
-}
-
 html {
   box-sizing: border-box;
 }
 
+body {
+  font-size: 16px;
+  text-rendering: optimizeLegibility;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 /**
  * Add a custom scrollbar
  */
@@ -48,8 +49,4 @@ html {
       background: #888;
     }
   }
-}
-
-.ant-input {
-  font-size: 16px;
 }
