--- a/src/app/admin/welcome/welcome.component.scss
+++ b/src/app/admin/welcome/welcome.component.scss
@@ -15,6 +15,13 @@ $header-size: 64px;
   -moz-osx-font-smoothing: grayscale;
 }
 
+.flex-center {
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
+}
+
 .default {
   &-layout {
     height: 100vh;
